fix: card row wrap for big screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -273,7 +273,6 @@ main {
         .row {
             display: flex;
             flex-wrap: wrap;
-            gap: 1rem;
 
             .circle {
 
@@ -286,6 +285,7 @@ main {
                 width: calc((100% / 12) * 2);
                 display: flex;
                 flex-direction: column;
+                padding: 0 1rem;
 
                 .col-top {
                     aspect-ratio: 1;
